Fix Feature wrap link hrefs, and title color

--- a/content/_sass/partials/home/_features.scss
+++ b/content/_sass/partials/home/_features.scss
@@ -57,9 +57,12 @@
 }
 
 .feature-box-wrap-link {
-  &:hover,
-  &:active,
   &:visited {
+    color: $black;
+  }
+
+  &:hover,
+  &:active {
     color: $cwl-red;
   }
 }
